[gd_scene load_steps=15 format=3 uid="uid://cugmsxkuwcfc4"]

[ext_resource type="Script" uid="uid://bdyul5l380bmt" path="res://Scripts/UI/map_marker_controls.gd" id="1_67mm3"]
[ext_resource type="Texture2D" uid="uid://b0qmg8dqfxxyf" path="res://Assets/UIPiecies/Screen/Panel_FullQuality.png" id="1_sg83c"]
[ext_resource type="PackedScene" uid="uid://ckhssy2ej85mq" path="res://Scenes/ScreenUI/AnimatedDroneGas.tscn" id="2_67mm3"]
[ext_resource type="Texture2D" uid="uid://cl1clnce643mg" path="res://Assets/UIPiecies/Screen/Button4_Camera 1_FullQuality.png" id="3_djntk"]
[ext_resource type="Texture2D" uid="uid://bgecu1r7dbryn" path="res://Assets/UIPiecies/Screen/Button4_Camera 1_FullQuality_Pressed.png" id="4_gq5gp"]
[ext_resource type="BitMap" uid="uid://1fe3bd6jslqu" path="res://Assets/UIPiecies/Screen/ButtonMask_Camera 1_FullQuality.png" id="5_ukqae"]
[ext_resource type="Texture2D" uid="uid://bxkdjy0yeuig4" path="res://Assets/UIPiecies/Screen/Button5_Camera 1_FullQuality.png" id="6_i6u6v"]
[ext_resource type="Texture2D" uid="uid://2gkqio6ka74a" path="res://Assets/UIPiecies/Screen/Button5_Camera 1_FullQuality_Pressed.png" id="7_g7jsi"]
[ext_resource type="Texture2D" uid="uid://kxagwb8gq1pm" path="res://Assets/UIPiecies/Screen/Button2_Camera 1_FullQuality.png" id="8_u42xd"]
[ext_resource type="Texture2D" uid="uid://byy7qb0rfhypw" path="res://Assets/UIPiecies/Screen/Button2_Camera 1_FullQuality_Pressed.png" id="9_sxrep"]

[sub_resource type="Animation" id="Animation_67mm3"]
resource_name = "Hide"
tracks/0/type = "value"
tracks/0/imported = false
tracks/0/enabled = true
tracks/0/path = NodePath("Control:position")
tracks/0/interp = 2
tracks/0/loop_wrap = true
tracks/0/keys = {
"times": PackedFloat32Array(0, 1),
"transitions": PackedFloat32Array(1, 1),
"update": 0,
"values": [Vector2(0, 0), Vector2(0, 163)]
}

[sub_resource type="Animation" id="Animation_djntk"]
length = 0.001
tracks/0/type = "value"
tracks/0/imported = false
tracks/0/enabled = true
tracks/0/path = NodePath("Control:position")
tracks/0/interp = 1
tracks/0/loop_wrap = true
tracks/0/keys = {
"times": PackedFloat32Array(0),
"transitions": PackedFloat32Array(1),
"update": 0,
"values": [Vector2(0, 163)]
}

[sub_resource type="Animation" id="Animation_gq5gp"]
resource_name = "Show"
tracks/0/type = "value"
tracks/0/imported = false
tracks/0/enabled = true
tracks/0/path = NodePath("Control:position")
tracks/0/interp = 2
tracks/0/loop_wrap = true
tracks/0/keys = {
"times": PackedFloat32Array(0, 1),
"transitions": PackedFloat32Array(1, 1),
"update": 0,
"values": [Vector2(0, 163), Vector2(0, 0)]
}

[sub_resource type="AnimationLibrary" id="AnimationLibrary_djntk"]
_data = {
&"Hide": SubResource("Animation_67mm3"),
&"RESET": SubResource("Animation_djntk"),
&"Show": SubResource("Animation_gq5gp")
}

[node name="MapMarkerControls" type="Control" node_paths=PackedStringArray("TouchStopper")]
layout_mode = 3
anchors_preset = 3
anchor_left = 1.0
anchor_top = 1.0
anchor_right = 1.0
anchor_bottom = 1.0
offset_left = -441.0
offset_top = -74.0
offset_right = -401.0
offset_bottom = -34.0
grow_horizontal = 0
grow_vertical = 0
mouse_filter = 2
script = ExtResource("1_67mm3")
TouchStopper = NodePath("Control/Control")

[node name="Control" type="Control" parent="."]
anchors_preset = 0
offset_top = 163.0
offset_right = 40.0
offset_bottom = 203.0

[node name="TextureRect2" type="TextureRect" parent="Control"]
texture_filter = 1
layout_mode = 0
offset_left = -289.0
offset_top = -90.0
offset_right = 182.0
offset_bottom = 74.0
mouse_filter = 0
texture = ExtResource("1_sg83c")
expand_mode = 1

[node name="TextureRect2" type="TextureRect" parent="Control/TextureRect2"]
modulate = Color(0, 0, 0, 0.518)
show_behind_parent = true
layout_mode = 0
offset_left = -11.0
offset_top = -10.0
offset_right = 460.0
offset_bottom = 154.0
mouse_filter = 2
texture = ExtResource("1_sg83c")
expand_mode = 1

[node name="YGas" parent="Control" instance=ExtResource("2_67mm3")]
position = Vector2(-117, 34)
scale = Vector2(0.520363, 0.520363)

[node name="XGas" parent="Control" instance=ExtResource("2_67mm3")]
position = Vector2(72, -55)
scale = Vector2(0.787035, 0.787035)

[node name="ExitMapMarker" type="TextureButton" parent="Control" groups=["Buttons"]]
layout_mode = 1
anchors_preset = 7
anchor_left = 0.5
anchor_top = 1.0
anchor_right = 0.5
anchor_bottom = 1.0
offset_left = 82.0
offset_top = -8.0
offset_right = 149.0
offset_bottom = 19.0
grow_horizontal = 2
grow_vertical = 0
texture_normal = ExtResource("3_djntk")
texture_pressed = ExtResource("4_gq5gp")
texture_click_mask = ExtResource("5_ukqae")
ignore_texture_size = true
stretch_mode = 0

[node name="ClearLines" type="TextureButton" parent="Control" groups=["Buttons"]]
layout_mode = 1
anchors_preset = 7
anchor_left = 0.5
anchor_top = 1.0
anchor_right = 0.5
anchor_bottom = 1.0
offset_left = 83.0
offset_top = -47.0
offset_right = 149.0
offset_bottom = -22.0
grow_horizontal = 2
grow_vertical = 0
texture_normal = ExtResource("6_i6u6v")
texture_pressed = ExtResource("7_g7jsi")
texture_click_mask = ExtResource("5_ukqae")
ignore_texture_size = true
stretch_mode = 0

[node name="DrawLine" type="TextureButton" parent="Control" groups=["Buttons"]]
layout_mode = 1
anchors_preset = 7
anchor_left = 0.5
anchor_top = 1.0
anchor_right = 0.5
anchor_bottom = 1.0
offset_left = -48.0
offset_top = -49.0
offset_right = 21.0
offset_bottom = -20.0
grow_horizontal = 2
grow_vertical = 0
texture_normal = ExtResource("8_u42xd")
texture_pressed = ExtResource("9_sxrep")
texture_click_mask = ExtResource("5_ukqae")
ignore_texture_size = true
stretch_mode = 0

[node name="DrawText" type="TextureButton" parent="Control" groups=["Buttons"]]
layout_mode = 1
anchors_preset = 7
anchor_left = 0.5
anchor_top = 1.0
anchor_right = 0.5
anchor_bottom = 1.0
offset_left = -47.0
offset_top = -8.0
offset_right = 21.0
offset_bottom = 20.0
grow_horizontal = 2
grow_vertical = 0
texture_normal = ExtResource("8_u42xd")
texture_pressed = ExtResource("9_sxrep")
texture_click_mask = ExtResource("5_ukqae")
ignore_texture_size = true
stretch_mode = 0

[node name="Control" type="Control" parent="Control"]
layout_mode = 1
anchors_preset = 8
anchor_left = 0.5
anchor_top = 0.5
anchor_right = 0.5
anchor_bottom = 0.5
offset_left = -214.0
offset_top = -105.0
offset_right = 160.0
offset_bottom = 51.0
grow_horizontal = 2
grow_vertical = 2

[node name="AnimationPlayer" type="AnimationPlayer" parent="."]
libraries = {
&"": SubResource("AnimationLibrary_djntk")
}

[connection signal="RangeChanged" from="Control/YGas" to="." method="_on_y_gas_range_changed"]
[connection signal="RangeChanged" from="Control/XGas" to="." method="_on_x_gas_range_changed"]
[connection signal="pressed" from="Control/ExitMapMarker" to="." method="_on_exit_map_marker_pressed"]
[connection signal="pressed" from="Control/ClearLines" to="." method="_on_clear_lines_pressed"]
[connection signal="pressed" from="Control/DrawLine" to="." method="_on_draw_line_pressed"]
[connection signal="pressed" from="Control/DrawText" to="." method="_on_draw_text_pressed"]
[connection signal="animation_finished" from="AnimationPlayer" to="." method="_on_animation_player_animation_finished"]
